# kitchen-hand-guide

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  docker-rebuild-and-run.sh  schema.sql
.claude/: settings.local.json
migrations/: 002_add_users_and_prep_steps.sql  add_picture_url_to_preparations.sql
src/: auth.rs  db.rs  handlers.rs  main.rs  middleware.rs  models.rs  utils.rs
static/: styles.css
templates/: 401.html  base.html  index.html  login.html  preparation_detail.html  preparation_edit.html  preparation_new.html  preparations_index.html  product_detail.html  product_edit.html  product_new.html  register.html  search_results.html
