[package]
name = "kitchen-hand-guide"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.4"
actix-multipart = "0.6"
actix-files = "0.6"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Database
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
] }

# UUID support
uuid = { version = "1.6", features = ["v4", "serde"] }

# Templating
askama = { version = "0.12", features = ["serde-json"] }
askama_actix = "0.14"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Environment variables
dotenv = "0.15"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
sanitize-filename = "0.5"
env_logger = "0.11"

# Authentication
jsonwebtoken = "9.2"
bcrypt = "0.15"

# AWS S3
aws-config = "1.1"
aws-sdk-s3 = "1.15"
bytes = "1.5"

[dev-dependencies]
